# squawk

./: .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .npmignore  .oxfmtrc.json  .pre-commit-hooks.yaml  .prettierignore  .prettierrc.js  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEMO_README.md  Dockerfile  PLAN.md  README.md  broken-example.sql  clippy.toml  example.sql  flake.nix  foo.sql  package.json  plopfile.js  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json
cli/: Cargo.toml  pyproject.toml
cli/src/: config.rs  file_finding.rs  main.rs  reporter.rs  subcommand.rs
cli/src/snapshots/: squawk__config__test_config__load_assume_in_transaction.snap  squawk__config__test_config__load_assume_transaction.snap  squawk__config__test_config__load_cfg_full.snap  squawk__config__test_config__load_excluded_paths.snap  squawk__config__test_config__load_excluded_rules.snap  squawk__config__test_config__load_pg_version.snap  squawk__reporter__test_check_files__check_files_invalid_syntax.snap  squawk__reporter__test_check_files__check_files_invalid_syntax.snap.new  squawk__reporter__test_github_comment__generating_comment_multiple_files.snap  squawk__reporter__test_github_comment__generating_comment_no_violations.snap  squawk__reporter__test_github_comment__generating_no_violations_no_files.snap  squawk__reporter__test_reporter__display_no_violations_tty.snap  squawk__reporter__test_reporter__display_violations_tty.snap  squawk__reporter__test_reporter__display_violations_tty.snap.new  squawk__reporter__test_reporter__span_offsets.snap  squawk__reporter__test_reporter__span_offsets.snap.new
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  debug.rs  file_finding.rs  github.rs  main.rs  reporter.rs
crates/github/: Cargo.toml
crates/github/src/: actions.rs  lib.rs
crates/linter/: Cargo.toml  README.md
crates/linter/src/: lib.rs  versions.rs
crates/parser/: Cargo.toml  README.md
crates/parser/src/: ast.rs  error.rs  lib.rs
crates/squawk/: Cargo.toml  pyproject.toml
crates/squawk/src/: cmd.rs  config.rs  debug.rs  file.rs  github.rs  main.rs  reporter.rs  server.rs
crates/squawk/tests/: example_output.rs
crates/squawk_cli/: Cargo.toml
crates/squawk_cli/src/: main.rs
crates/squawk_fmt/: Cargo.toml
crates/squawk_fmt/src/: fmt.rs  lib.rs  main.rs
crates/squawk_fmt/tests/: tests.rs
crates/squawk_github/: Cargo.toml  README.md
crates/squawk_github/src/: actions.rs  app.rs  lib.rs
crates/squawk_ide/: Cargo.toml
crates/squawk_ide/src/: ast_nav.rs  binder.rs  builtins.rs  builtins.sql  classify.rs  code_actions.rs  collect.rs  column_name.rs  comments.rs  completion.rs  db.rs  document_symbols.rs  expand_selection.rs  file.rs  find_references.rs  folding_ranges.rs  goto_definition.rs  hover.rs  infer.rs  inlay_hints.rs  lib.rs  literals.rs  location.rs  name.rs  offsets.rs  quote.rs  resolve.rs  scope.rs  semantic_tokens.rs  symbols.rs  test_utils.rs  tokens.rs
crates/squawk_lexer/: Cargo.toml  README.md
crates/squawk_lexer/src/: LICENSE-MIT  cursor.rs  lib.rs  token.rs
crates/squawk_linter/: Cargo.toml  README.md
crates/squawk_linter/src/: analyze.rs  config.rs  identifier.rs  ignore.rs  ignore_index.rs  lib.rs  test_utils.rs  text.rs  version.rs  visitors.rs
crates/squawk_parser/: Cargo.toml  README.md
crates/squawk_parser/src/: event.rs  grammar.rs  input.rs  lexed_str.rs  lib.rs  output.rs  shortcuts.rs  syntax_kind.rs  test.rs  token_set.rs
crates/squawk_parser/tests/: regression_suite.rs  tests.rs  utils.rs
crates/squawk_server/: Cargo.toml  README.md
crates/squawk_server/src/: config.rs  db.rs  diagnostic.rs  dispatch.rs  global_state.rs  handlers.rs  ignore.rs  lib.rs  lint.rs  lsp_utils.rs  panic.rs  semantic_tokens.rs  server.rs  system.rs
crates/squawk_syntax/: Cargo.toml  README.md
crates/squawk_syntax/src/: ast.rs  identifier.rs  lib.rs  parsing.rs  postgresql.ungram  ptr.rs  quote.rs  syntax_error.rs  syntax_node.rs  test.rs  token_text.rs  unescape.rs  validation.rs
crates/squawk_thread/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/squawk_thread/src/: intent.rs  lib.rs  pool.rs  taskpool.rs
crates/squawk_wasm/: Cargo.toml  README.md
crates/squawk_wasm/src/: lib.rs
crates/xtask/: Cargo.toml  README.md
crates/xtask/src/: codegen.rs  download_regression_tests.rs  generate_keywords.rs  keywords.rs  lsp_eval.rs  main.rs  new_lint.rs  new_rule.rs  path.rs  path_util.rs  sync_builtins.rs  sync_kwlist.rs  sync_pg.rs  sync_regression_suite.rs  update_version.rs
github/: Cargo.toml  README.md
github/src/: actions.rs  app.rs  lib.rs
linter/: Cargo.toml
linter/src/: errors.rs  lib.rs  pg_version.rs  rules.rs  versions.rs  violations.rs
linter/src/rules/: README.md  adding_field_if_not_exists.rs  adding_field_with_default.rs  adding_foreign_key_constraint.rs  adding_not_null_field.rs  adding_not_null_with_default.rs  adding_primary_key_constraint.rs  adding_required_field.rs  adding_serial_field.rs  bad_drop_database.rs  ban_alter_domain_with_add_constraint.rs  ban_char_field.rs  ban_concurrent_index_creation_in_transaction.rs  ban_create_domain_with_constraint.rs  ban_drop_column.rs  ban_drop_database.rs  ban_drop_not_null.rs  ban_drop_table.rs  changing_column_type.rs  constraint_missing_not_valid.rs  disallow_unique_constraint.rs  mod.rs  prefer_big_int.rs  prefer_bigint_over_int.rs  prefer_bigint_over_smallint.rs  prefer_identity.rs  prefer_robust_stmts.rs  prefer_text_field.rs  prefer_timestamptz.rs  removing_existing_index.rs  renaming_column.rs  renaming_table.rs  require_concurrent_index_creation.rs  require_concurrent_index_deletion.rs  test_utils.rs  transaction_nesting.rs  utils.rs
linter/src/snapshots/: linter__rules__test_rules__adding_check_constraint.snap  linter__rules__test_rules__adding_field_that_is_not_nullable.snap  linter__rules__test_rules__adding_field_with_default.snap  linter__rules__test_rules__adding_foreign_key.snap  linter__rules__test_rules__adding_index_non_concurrently.snap  (+27 more)
parser/: Cargo.toml
parser/src/: ast.rs  error.rs  lib.rs  parse.rs
(+2410 files in other folders)
