[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.81.0"
authors = ["Squawk Team & Contributors"]
license = "GPL-3.0"

[workspace.dependencies]
# third party
atty = "0.2"
base64 = "0.12.2"
console = "0.11.3"
glob = "0.3.1"
insta = "1.39.0"
jsonwebtoken = "8.1.1"
lazy_static = "1.5.0"
log = "0.4.25"
reqwest = { version = "0.9.18", features = ["default-tls-vendored"]}
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
serde_plain = "1.0"
serde_repr = "0.1"
simplelog = "0.12.0"
structopt = "0.3"
tempfile = "3.2.0"
toml = "0.5.9"
dir-test = "0.4"
drop_bomb = "0.1.5"
camino = "1.1.9"
pg_query = "6.1.0"
rowan = "0.15.15"
smol_str = "0.3.2"
enum-iterator = "2.1.0"
line-index = "0.1.2"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"
wasm-bindgen-test = "0.3.34"
web-sys = "0.3.77"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
annotate-snippets = "0.11.5"
anyhow = "1.0.94"
convert_case = "0.7.1"
clap = { version = "4.5.8", features = ["derive"] }

# local
squawk-github = { version = "0.0.0", path = "./crates/github" }
squawk_lexer = { version = "0.0.0", path = "./crates/squawk_lexer" }
squawk_parser = { version = "0.0.0", path = "./crates/squawk_parser" }
squawk_syntax = { version = "0.0.0", path = "./crates/squawk_syntax" }
squawk_linter = { version = "0.0.0", path = "./crates/squawk_linter" }

[workspace.lints.clippy]
collapsible_else_if = "allow"
collapsible_if = "allow"
needless_return = "allow"
doc_markdown = "deny"
manual_let_else = "deny"
explicit_iter_loop = "deny"
too_many_arguments = "allow"

[profile.dev]
debug = 0

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
# These speed up local tests.
rowan.opt-level = 3
text-size.opt-level = 3
