[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "2.27.0"
edition = "2024"
rust-version = "1.90.0"
authors = ["Squawk Team & Contributors"]
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
# third party
base64 = "0.12.2"
console = "0.11.3"
glob = "0.3.1"
insta = "1.39.0"
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
log = "0.4.25"
reqwest = { version = "0.11.27", features = ["native-tls-vendored", "blocking", "json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
serde_plain = "1.0"
serde_repr = "0.1"
regex = "1.11.1"
simplelog = "0.12.0"
tempfile = "3.21.0"
toml = "0.5.9"
dir-test = "0.4"
drop_bomb = "0.1.5"
camino = "1.1.9"
pg_query = "6.1.0"
rowan = "0.15.15"
smol_str = "0.3.2"
enum-iterator = "2.1.0"
line-index = "0.1.2"
lsp-server = "0.7.8"
lsp-types = "0.95"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"
wasm-bindgen-test = "0.3.34"
web-sys = "0.3.77"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
annotate-snippets = "0.12.4"
anyhow = "1.0.94"
convert_case = "0.7.1"
clap = { version = "4.5.8", features = ["derive", "env"] }
ungrammar = "1.1.4"
quote = "1.0.40"
xshell = "0.2.7"
proc-macro2 = "1.0.95"
snapbox = { version = "0.6.0", features = ["diff", "term-svg", "cmd"] }

# local
# we have to make the versions explicit otherwise `cargo publish` won't work
squawk_github = { path = "./crates/squawk_github", version = "2.27.0" }
squawk_lexer = { path = "./crates/squawk_lexer", version = "2.27.0" }
squawk_parser = { path = "./crates/squawk_parser", version = "2.27.0" }
squawk_syntax = { path = "./crates/squawk_syntax", version = "2.27.0" }
squawk_linter = { path = "./crates/squawk_linter", version = "2.27.0" }
squawk_server = { path = "./crates/squawk_server", version = "2.27.0" }

[workspace.lints.clippy]
collapsible_else_if = "allow"
collapsible_if = "allow"
needless_return = "allow"
doc_markdown = "deny"
manual_let_else = "deny"
explicit_iter_loop = "deny"
too_many_arguments = "allow"

[profile.dev]
debug = 0

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
# These speed up local tests.
rowan.opt-level = 3
text-size.opt-level = 3
