[package]
name = "squawk"
version = "1.6.1"
authors = ["Steve Dignam <steve@dignam.xyz>"]
edition = "2018"
license = "GPL-3.0"
description = "Linter for Postgresql focused on database migrations."
repository = "https://github.com/sbdchd/squawk"
documentation = "https://github.com/sbdchd/squawk/blob/master/README.md"
readme = "../README.md"
keywords = ["postgres", "postgresql", "linter"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
tempfile = "3.2.0"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
console = "0.11.3"
atty = "0.2"
base64 = "0.12.2"
simplelog = "0.12.0"
log = "0.4.8"
squawk-parser = { version = "0.0.0", path = "../parser" }
squawk-linter = { version = "0.0.0", path = "../linter" }
squawk-github = { version = "0.0.0", path = "../github" }
toml = "0.5.9"
glob = "0.3.1"

[dev-dependencies]
insta = "0.16.0"
