[package]
name = "squawk-github"
version = "0.0.0"
authors = ["Steve Dignam <steve@dignam.xyz>"]
edition = "2018"
license = "GPL-3.0"
description = "Postgres SQL linter Github APIs used in Squawk"
repository = "https://github.com/sbdchd/squawk"
readme = "README.md"
keywords = ["bot", "github", "linter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "*"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.9.18", features = ["default-tls-vendored"]}
log = "0.4.8"
