[package]
name = "squawk-linter"
version = "0.1.0"
authors = ["Steve Dignam <steve@dignam.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
squawk-parser = { version = "0.1.0", path = "../parser" }
lazy_static = "1.4.0"

[dev-dependencies]
insta = "0.16.0"
