[package]
name = "squawk-linter"
version = "0.0.0"
authors = ["Steve Dignam <steve@dignam.xyz>"]
edition = "2018"
license = "GPL-3.0"
description = "Postgres SQL linter used in squawk"
repository = "https://github.com/sbdchd/squawk"
readme = "README.md"
keywords = ["postgres", "sql", "linter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
squawk-parser = { version = "0.0.0", path = "../parser" }
serde_plain = "1.0"
lazy_static = "1.4.0"
serde_json = "1.0"

[dev-dependencies]
insta = "0.16.0"
