[package]
name = "squawk-parser"
version = "0.2.3"
authors = ["Steve Dignam <steve@dignam.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libpg_query-sys = "0.1.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"

[dev-dependencies]
insta = "0.16.0"
