[package]
name = "squawk-parser"
version = "0.0.0"
authors = ["Steve Dignam <steve@dignam.xyz>"]
edition = "2018"
license = "GPL-3.0"
description = "Postgres SQL parser used in squawk"
repository = "https://github.com/sbdchd/squawk"
readme = "README.md"
keywords = ["postgres", "sql", "parser"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libpg_query-sys = { git = "https://github.com/chdsbd/libpg_query-sys.git", rev = "f4584dcbcb8c1f3bee550477257e84a846fdd92d" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"

[dev-dependencies]
insta = "0.16.0"
