[package]
name = "squawk"
version = "1.6.1"
authors = ["Steve Dignam <steve@dignam.xyz>"]
edition = "2018"
license = "GPL-3.0"
description = "Linter for Postgresql focused on database migrations."
repository = "https://github.com/sbdchd/squawk"
documentation = "https://github.com/sbdchd/squawk/blob/master/README.md"
readme = "../../README.md"
keywords = ["postgres", "postgresql", "linter"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json.workspace = true
tempfile.workspace = true
serde.workspace = true
structopt.workspace = true
console.workspace = true
atty.workspace = true
base64.workspace = true
simplelog.workspace = true
log.workspace = true
squawk-parser.workspace = true
squawk-linter.workspace = true
squawk-github.workspace = true
toml.workspace = true
glob.workspace = true

[dev-dependencies]
insta.workspace = true
