[package]
name = "squawk"
version = "2.0.0"
default-run = "squawk"

authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Linter for Postgresql focused on database migrations."
repository = "https://github.com/sbdchd/squawk"
documentation = "https://github.com/sbdchd/squawk/blob/master/README.md"
readme = "../../README.md"
keywords = ["postgres", "postgresql", "linter"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json.workspace = true
tempfile.workspace = true
serde.workspace = true
structopt.workspace = true
console.workspace = true
atty.workspace = true
base64.workspace = true
simplelog.workspace = true
log.workspace = true
enum-iterator.workspace = true
squawk_syntax.workspace = true
squawk_linter.workspace = true
squawk_lexer.workspace = true
squawk-github.workspace = true
toml.workspace = true
glob.workspace = true
anyhow.workspace = true
annotate-snippets.workspace = true
line-index.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
