[package]
name = "squawk-github"
version = "0.0.0"
authors = ["Steve Dignam <steve@dignam.xyz>"]
edition = "2018"
license = "GPL-3.0"
description = "Postgres SQL linter Github APIs used in Squawk"
repository = "https://github.com/sbdchd/squawk"
readme = "README.md"
keywords = ["bot", "github", "linter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken.workspace = true
serde_json.workspace = true
serde.workspace = true
reqwest.workspace = true
log.workspace = true
