[package]
name = "squawk-linter"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Postgres SQL linter used in squawk"
repository = "https://github.com/sbdchd/squawk"
readme = "README.md"
keywords = ["postgres", "sql", "linter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
squawk-parser.workspace = true
serde_plain.workspace = true
lazy_static.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true
