[package]
name = "squawk-parser"
version = "0.0.0"
authors = ["Steve Dignam <steve@dignam.xyz>"]
edition = "2018"
license = "GPL-3.0"
description = "Postgres SQL parser used in squawk"
repository = "https://github.com/sbdchd/squawk"
readme = "README.md"
keywords = ["postgres", "sql", "parser"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json.workspace = true
serde.workspace = true
serde_repr.workspace = true
libpg_query-sys.workspace = true

[dev-dependencies]
insta.workspace = true
