[package]
name = "squawk"
version.workspace = true
default-run = "squawk"

authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Linter for Postgresql focused on database migrations."
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["postgres", "postgresql", "linter"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json.workspace = true
tempfile.workspace = true
serde.workspace = true
clap.workspace = true
console.workspace = true
base64.workspace = true
simplelog.workspace = true
log.workspace = true
enum-iterator.workspace = true
squawk-syntax.workspace = true
squawk-linter.workspace = true
squawk-lexer.workspace = true
squawk-github.workspace = true
squawk-server.workspace = true
toml.workspace = true
glob.workspace = true
anyhow.workspace = true
annotate-snippets.workspace = true
line-index.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true

[dev-dependencies]
insta.workspace = true
snapbox.workspace = true

[lints]
workspace = true
