[package]
name = "squawk_cli"
version = "0.0.0"
description = "TBD"
default-run = "squawk_cli"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
anyhow.workspace = true
enum-iterator.workspace = true
annotate-snippets.workspace = true
atty.workspace = true

squawk_syntax.workspace = true
squawk_lexer.workspace = true
squawk_linter.workspace = true

[lints]
workspace = true
