[package]
name = "squawk_github"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Postgres SQL linter Github APIs used in Squawk"
repository = "https://github.com/sbdchd/squawk"
readme = "README.md"
keywords = ["bot", "github", "linter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken.workspace = true
serde_json.workspace = true
serde.workspace = true
reqwest.workspace = true
log.workspace = true
