[package]
name = "squawk-ide"
version.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
squawk-syntax.workspace = true
rowan.workspace = true
line-index.workspace = true
annotate-snippets.workspace = true
log.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
