[package]
name = "squawk-lexer"
version.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

authors.workspace = true
edition.workspace = true
license = "MIT"
rust-version.workspace = true

[lib]
doctest = false

[dependencies]

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
