[package]
name = "squawk_linter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
squawk_syntax.workspace = true

rowan.workspace = true
serde.workspace = true
lazy_static.workspace = true
insta.workspace = true
enum-iterator.workspace = true
line-index.workspace = true
serde_plain.workspace = true


[lints]
workspace = true
