[package]
name = "squawk-linter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
squawk-syntax.workspace = true

rowan.workspace = true
serde.workspace = true
lazy_static.workspace = true
insta.workspace = true
enum-iterator.workspace = true
line-index.workspace = true
serde_plain.workspace = true
annotate-snippets.workspace = true


[lints]
workspace = true
