[package]
name = "squawk-parser"
version.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
squawk-lexer.workspace = true
drop_bomb.workspace = true

[dev-dependencies]
insta.workspace = true
dir-test.workspace = true
camino.workspace = true
pg_query.workspace = true
xshell.workspace = true
annotate-snippets.workspace = true

[lints]
workspace = true
