[package]
name = "squawk_server"
version.workspace = true

authors.workspace = true
edition.workspace = true
license.workspace = true
description = "LSP server for Squawk"

[dependencies]
anyhow.workspace = true
log.workspace = true
simplelog.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
squawk_lexer.workspace = true
squawk_linter.workspace = true
squawk_syntax.workspace = true
line-index.workspace = true
insta.workspace = true

[lints]
workspace = true
