[package]
name = "squawk-server"
version.workspace = true

authors.workspace = true
edition.workspace = true
license.workspace = true
description = "LSP server for Squawk"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
log.workspace = true
simplelog.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
rowan.workspace = true
serde.workspace = true
serde_json.workspace = true
squawk-ide.workspace = true
squawk-lexer.workspace = true
squawk-linter.workspace = true
squawk-syntax.workspace = true
line-index.workspace = true
insta.workspace = true
etcetera.workspace = true

[lints]
workspace = true
