[package]
name = "squawk_syntax"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
squawk_parser.workspace = true
rowan.workspace = true
smol_str.workspace = true

[dev-dependencies]
insta.workspace = true
dir-test.workspace = true
camino.workspace = true

[lints]
workspace = true
