[package]
name = "squawk_wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]

squawk_syntax.workspace = true
squawk_linter.workspace = true
squawk_lexer.workspace = true

wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
console_error_panic_hook = { workspace = true, optional = true }
web-sys = { workspace = true, features = ["Window"] }
console_log.workspace = true
log.workspace = true
line-index.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true

[lints]
workspace = true
