[package]
name = "squawk-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
default = ["console_error_panic_hook"]

[dependencies]

squawk-syntax.workspace = true
squawk-linter.workspace = true
squawk-lexer.workspace = true
squawk-ide.workspace = true
rowan.workspace = true

wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
console_error_panic_hook = { workspace = true, optional = true }
web-sys = { workspace = true, features = ["Window"] }
console_log.workspace = true
log.workspace = true
line-index.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true

[lints]
workspace = true
