[package]
name = "xtask"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
enum-iterator.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }
serde.workspace = true
serde_json.workspace = true
convert_case.workspace = true
camino.workspace = true
ungrammar.workspace = true
quote.workspace = true
xshell.workspace = true
proc-macro2.workspace = true
regex.workspace = true

[lints]
workspace = true
